@@ -718,8 +718,14 @@ class phodevi_cpu extends phodevi_device_interface
 						case '0xd0d':
 							$new_info .= ' Cortex-A77';
 							break;
+						case '0xd47':
+							$new_info .= ' Cortex-A710';
+							break;
 						case '0xd0c':
 							$new_info .= ' Neoverse-N1';
+							break;
+						case '0xd49':
+							$new_info .= ' Cortex-N2';
 							break;
 						case '0xd44':
 							$new_info .= ' Cortex-X1';
